[tool.poetry]
name = "publ.beesbuzz.biz"
version = "0.1.0"
description = ""
authors = ["fluffy <fluffy@beesbuzz.biz>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
python-memcached = "^1.62"
publ = {version = "*", extras = ["auth", "search"]}
flask-github-webhook = "^0.2.0"
hypercorn = "^0.18.0"
pushl = "^0.4.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
